--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,47 +1,117 @@
 <!doctype html>
-<title>File Uploader</title>
-<style>
-    body,
-    .center {
-        margin: auto;
-        width: 50%;
-        border: 3px solid green;
-        padding: 10px;
-    }
-</style>
-<body>
- 
-{% block content %}
-    <h1 class="title">
-  Flask Login Example
-</h1>
-    <h2 class="subtitle">
-  Easy authentication and authorization in Flask.
-</h2> {% endblock %}
-    
-   <p>
-        {% with messages = get_flashed_messages() %} {% if messages %}
-        <ul class=flashes>
-            {% for message in messages %}
-            <li>{{ message }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %} {% endwith %}
-    </p>
 
-<form method="post" action="/upload" enctype="multipart/form-data">
+<html>
 
-        <div class="box__input">
-            <dl>
-                <p> upload_key: <input name="psw" type="password" /></p>
-                <p>
-                    <input type="file" name="files[]" multiple="true" autocomplete="off" required>
-                </p>
-            </dl>
-            <p>
-                <input type="submit" value="Submit">
-            </p>
+    <head>
+        <title>AP2I: Scanning and Discovering Tool</title>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="jquery-3.5.1.min.js"></script>
+        
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+        <link rel="stylesheet" href="{{url_for('static',filename='style/style1.css')}}">
+        <link href="/open-iconic/font/css/open-iconic-bootstrap.css" rel="stylesheet">
+
+        <script>
+            function optSelect(){
+                if (document.getElementById("option1").checked){
+                    document.getElementById("choice1").style.display='block';
+                    document.getElementById("choice2").style.display='none';
+                    document.getElementById("choice3").style.display='block';
+                    }
+                
+                if (document.getElementById("option2").checked){
+                    document.getElementById("choice1").style.display='none';
+                    document.getElementById("choice2").style.display='block';
+                    document.getElementById("choice3").style.display='block';
+                    }
+            }
+        </script>
+        <script language="javascript" type="text/javascript">
+            $(function()
+            {
+                $('#choice1').on('change',function ()
+                {
+                    var filePath = $(this).val();
+                    console.log(filePath);
+                 });
+            });
+        </script>
+        <script type="text/javascript">    
+            var path = (window.URL || window.webkitURL).createObjectURL(file);
+            console.log('path', path);
+        </script>
+    </head>
+
+    <body>
+        <h1 class="container p-3 mb-2"> Welcome,<br> What can we help you today</h1>
+        <!-- <h2>msg</h2> -->
+        <!--Scanning-->
+        <div class="container rounded p-3 mb-2 bg-info">
+            <div class="d-flex justify-content-between">
+                <h2>Scan</h2>
+                <input class="btn btn-success btn-lg" type="submit" value="Scan" action="main.py">
+                <!--img src="{{url_for('static', filename='search.png', width=5, height=5, quality=95)}}" align="middle"-->
+            </div>
+            <br>
+            <div class="p-3 mb-2 bg-white">
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="option1" value="option1" onclick="optSelect()">
+                    <label class="form-check-label" for="inlineRadio1">File</label>
+                
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="option2" value="option2" onclick="optSelect()">
+                    <label class="form-check-label" for="inlineRadio2">Webpage</label>
+                </div>
+                <br> 
+
+                <!-- Input Field-->               
+                <form class= "reveal" action="/upload" method="POST" enctype="multipart/form-data">
+            
+                    <div class="form-group col-md-6" id="choice1" style="display:none">
+                    <label>Select File</label>
+                        <input type="file" class="custom-file-input" name="file" id="file" multiple="true">
+                    </div>
+                    <div class="form-group col-md-6" id="choice2" style="display:none">
+                        <input type="text" class="form-control" name = "web-scan" id="web-scan" placeholder="insert your url">
+                    </div>
+            
+                    <button type="submit" class="btn btn-primary" id="choice3" style="display:none">Upload</button>
+            
+                </form>               
+            </div>
         </div>
+        
+        <!-- PII Inventory
+        <div class="container rounded bg-info p-3 mb-2">
+            <div class="d-flex justify-content-between">
+                <h2>PII Inventory</h2>
+                <form>
+                    <button type="submit" class="btn btn-success btn-lg" formaction="{{ url_for('piiView')}}">View Reports</button>
+                </form>            
+            </div>
+            <br>
+            <div class="container bg-white p-3 mb-2">
+                <button type="button" class="btn btn-success badge rounded-pill"><i class="fa fa-flag"></i></button>
+                <span> 26 consents found in Consent Management System</span><br>
+                <button type="button" class="btn btn-danger badge rounded-pill"><i class="fa fa-flag"></i></button>
+                <span> 7 consents not found in Consent Management System</span>
+            </div>
+        </div>
+         -->
 
-
-    </form>
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
+        <script>
+            var iptEls = document.querySelectorAll('input');
+                [].forEach.call(inps, function(iptEl) {
+                iptEl.onchange = function(e) {
+                console.log(this.files);
+                };
+            });
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+    </body>
+</html>
