--- a/templates/upload.html
+++ b/templates/upload.html
@@ -45,15 +45,15 @@
     </head>
 
     <body>
-        <h1 class="container p-3 mb-2"> Welcome,<br> What can we help you today</h1>
+        <h1 class="container p-3 mb-2"> Welcome,<br> What files do you want to scan today?</h1>
         <!-- <h2>msg</h2> -->
         <!--Scanning-->
         <div class="container rounded p-3 mb-2 bg-info">
-            <div class="d-flex justify-content-between">
+            <!-- <div class="d-flex justify-content-between">
                 <h2>Scan</h2>
-                <input class="btn btn-success btn-lg" type="submit" value="Scan" action="main.py">
+                <input class="btn btn-success btn-lg" type="submit" value="Scan" action="main.py"> -->
                 <!--img src="{{url_for('static', filename='search.png', width=5, height=5, quality=95)}}" align="middle"-->
-            </div>
+            <!-- </div> -->
             <br>
             <div class="p-3 mb-2 bg-white">
                 <div class="form-check form-check-inline">
@@ -70,14 +70,15 @@
                 <form class= "reveal" action="/upload" method="POST" enctype="multipart/form-data">
             
                     <div class="form-group col-md-6" id="choice1" style="display:none">
-                    <label>Select File</label>
+                        <label>Select files that need to be scanned</label>
                         <input type="file" class="custom-file-input" name="file" id="file" multiple="true">
                     </div>
                     <div class="form-group col-md-6" id="choice2" style="display:none">
-                        <input type="text" class="form-control" name = "web-scan" id="web-scan" placeholder="insert your url">
+                        <label>Enter the link for the website that needs to be scanned</label>
+                        <input type="text" class="form-control" name = "web-scan" id="web-scan" placeholder="Insert the web url here" size="500">
                     </div>
             
-                    <button type="submit" class="btn btn-primary" id="choice3" style="display:none">Upload</button>
+                    <button type="submit" class="btn btn-primary" id="choice3" style="display:none">Scan</button>
             
                 </form>               
             </div>
