--- a/templates/report.html
+++ b/templates/report.html
@@ -1,216 +1,151 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>AP2I: Scanning and Discovering Tool</title>
+{%extends "base.html"%}
 
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.13/css/jquery.dataTables.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
-    <script src="jquery-3.5.1.min.js"></script>
+{%block title%}Report{%endblock%}
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{url_for('static',filename='style/style.css')}}">
-    <link href="/open-iconic/font/css/open-iconic-bootstrap.css" rel="stylesheet">
+{%block head%}
+<!-- <link rel="apple-touch-icon" type="image/png" href="https://cpwebassets.codepen.io/assets/favicon/apple-touch-icon-5ae1a0698dcc2402e9712f7d01ed509a57814f994c660df9f7a952f3060705ee.png" />
+<meta name="apple-mobile-web-app-title" content="CodePen"> -->
 
-    <script>
-        function goBack() {
-        window.history.back();
-        }
-    </script>
-  </head>
-  <body>
-    <div class="container p-3 mb-2">
-        <h1><center>Report</h1>
-        <div class="d-flex justify-content-between">
-            <h2></h2>
-            <div>
-                <button type="submit" class="btn btn-warning" onclick="goBack()"><align ='right'>Back to PII Inventory</button>
+<!-- <link rel="shortcut icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/favicon-aec34940fbc1a6e787974dcd360f2c6b63348d4b1f4e06c77743096d55480f33.ico" /> -->
+
+<!-- <link rel="mask-icon" type="" href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" color="#111" /> -->
+  
+
+  <script>
+  window.console = window.console || function(t) {};
+</script>
+
+  
+  
+  <script>
+  if (document.location.search.match(/type=embed/gi)) {
+    window.parent.postMessage("resize", "*");
+  }
+</script>
+{%endblock%}
+
+{%block content%}
+
+<h1 class="container p-3 mb-2"> PII Report<br> (~/PII_Project/Mock/report)</h1>
+        <div class="container rounded p-3 mb-2 bg-info">
+            <div class="d-flex justify-content-between">
+                <h2>PII Report</h2>
+                <form>
+                  <button type="submit" class="btn btn-success btn-lg" formaction="{{ url_for('index')}}">Home</button>
+                  <button type="submit" class="btn btn-success btn-lg" formaction="{{ url_for('upload_file')}}">Scan</button>
+                  <button type="submit" class="btn btn-success btn-lg" formaction="{{ url_for('piiView')}}">View Reports</button>
+                </form>     
             </div>
-        </div>    
-    </div>
-    <div class="container rounded bg-transparent text-dark table-responsive p-3 mb-2">
-        <table id="report" class="table table-hover">
+            <br>
+            <div class="p-3 mb-2 bg-white">
+                <div class="form-check form-check-inline">
+                  <body translate="no" >
+                    <!DOCTYPE html>
+                  <html lang="en">
+                      <head>
+                          <meta charset="UTF-8">
+                          <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                          <title>CSV Viewer with HTML, CSS & JavaScript</title>
+                      </head>
+                      <body>
+                          <label>Choose a file from the report folder</label><br>
+                          <input type="file" id="csvFileInput" style="padding-bottom: 15px">
+                          <table id="csvRoot"></table>
+                        
+                        <script src="https://cdn.jsdelivr.net/npm/papaparse@5.2.0/papaparse.min.js"></script>
+                      </body>
+                  </html>
+                </div>        
+            </div>
+        </div>
+    <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-8216c69d01441f36c0ea791ae2d4469f0f8ff5326f00ae2d00e4bb7d20e24edb.js"></script>
+
+  
+      <script id="rendered-js" >
+class TableCsv {
+  /**
+   * @param {HTMLTableElement} root The table element which will display the CSV data.
+   */
+  constructor(root) {
+    this.root = root;
+  }
+
+  /**
+   * Clears existing data in the table and replaces it with new data.
+   *
+   * @param {string[][]} data A 2D array of data to be used as the table body
+   * @param {string[]} headerColumns List of headings to be used
+   */
+  update(data, headerColumns = []) {
+    this.clear();
+    this.setHeader(headerColumns);
+    this.setBody(data);
+  }
+
+  /**
+   * Clears all contents of the table (incl. the header).
+   */
+  clear() {
+    this.root.innerHTML = "";
+  }
+
+  /**
+   * Sets the table header.
+   *
+   * @param {string[]} headerColumns List of headings to be used
+   */
+  setHeader(headerColumns) {
+    this.root.insertAdjacentHTML(
+    "afterbegin",
+    `
             <thead>
                 <tr>
-                    <th scope="col">PII Type</th>
-                    <th scope="col">Location</th>
-                    <th scope="col">PII Categories</th>
-                    <th scope="col" >Document Type</th>
-                    <th scope="col">Consent Status</th>
+                    ${headerColumns.map(text => `<th>${text}</th>`).join("")}
                 </tr>
             </thead>
+        `);
+
+  }
+
+  /**
+   * Sets the table body.
+   *
+   * @param {string[][]} data A 2D array of data to be used as the table body
+   */
+  setBody(data) {
+    const rowsHtml = data.map(row => {
+      return `
+                <tr>
+                    ${row.map(text => `<td>${text}</td>`).join("")}
+                </tr>
+            `;
+    });
+
+    this.root.insertAdjacentHTML(
+    "beforeend",
+    `
             <tbody>
-                <tr>
-
-                    <td style="color:orange">Private</td>
-                    <td>Mock1.csv</td>
-                    <td>Name,Surname,Email</td>
-                    <td >CSV</td>
-                    <th scope="row">
-                        <button type="button" class="btn btn-success badge rounded-pill">YES</button> 
-                    </th>
-                </tr>
-                <tr>
-
-                    <td style="color:orange">Private</td>
-                    <td>mock2.csv</td>
-                    <td>Name,Email</td>
-                    <td >CSV</td>
-                    <th scope="row">
-                        <button type="button" class="btn btn-success badge rounded-pill">YES</button>
-                    </th>
-                </tr>
-                <tr>
-
-                    <td style="color:green">Public</td>
-                    <td>mock3.xlsx</td>
-                    <td>Email</td>
-                    <td >XLSX</td>
-                    <th scope="row">
-                        <button type="button" class="btn btn-success badge rounded-pill">YES</button>
-                    </th>
-                </tr>
-                <tr>
-
-                    <td style="color:green">Public</td>
-                    <td>example1.csv</td>
-                    <td>Email</td>
-                    <td >CSV</td>
-                    <th scope="row">
-                        <button type="button" class="btn btn-success badge rounded-pill">YES</button>
-                    </th>
-                </tr>
-                <tr>
-
-                    <td style="color:orange">Private</td>
-                    <td>example2.xlsx</td>
-                    <td>IP Address</td>
-                    <td >XLSX</td>
-                    <th scope="row">
-                        <button type="button" class="btn btn-success badge rounded-pill">YES</button>
-                    </th>
-                </tr>
-                <tr>
-
-                    <td style="color:red">Restricted</td>
-                    <td>example3.xlsx</td>
-                    <td>CitizenID</td>
-                    <td >XLSX</td>
-                    <th scope="row">
-                        <button type="button" class="btn btn-danger badge rounded-pill">NO</i></button>
-                    </th>
-                </tr>
-                <tr>
-
-                    <td style="color:red">Restricted</td>
-                    <td>test1.csv</td>
-                    <td>CitizenID</td>
-                    <td >CSV</td>
-                    <th scope="row">
-                        <button type="button" class="btn btn-danger badge rounded-pill">NO</button>
-                    </th>
-                </tr>
-                <tr>
-
-                    <td style="color:green">Public</td>
-                    <td>test5.xlsx</td>
-                    <td>Email</td>
-                    <td >XLSX</td>
-                    <th scope="row">
-                        <button type="button" class="btn btn-danger badge rounded-pill">NO</button>
-                    </th>
-                </tr>
-                <tr>
-
-                    <td style="color:orange">Private</td>
-                    <td>test6.csv</td>
-                    <td>Phone number, Account number</td>
-                    <td >CSV</td>
-                    <th scope="row">
-                        <button type="button" class="btn btn-success badge rounded-pill">YES</button>
-                    </th>
-                </tr>
-                <tr>
-
-                    <td style="color:red">Restricted</td>
-                    <td>test10.xlsx</td>
-                    <td>Credit card</td>
-                    <td >XLSX</td>
-                    <th scope="row">
-                        <button type="button" class="btn btn-danger badge rounded-pill">NO</button>
-                    </th>
-                </tr>
-                <tr>
-
-                    <td style="color:red">Restricted</td>
-                    <td>ttest.csv</td>
-                    <td>IP Address,Name</td>
-                    <td >CSV</td>
-                    <th scope="row">
-                        <button type="button" class="btn btn-danger badge rounded-pill">NO</button>
-                    </th>
-                </tr>
-                <tr>
-
-                    <td style="color:green">Public</td>
-                    <td>ttest2.csv</td>
-                    <td>Email</td>
-                    <td >CSV</td>
-                    <th scope="row">
-                        <button type="button" class="btn btn-success badge rounded-pill">YES</button>
-                    </th>
-                </tr>
-                <tr>
-
-                    <td style="color:orange">Private</td>
-                    <td>test-1.xlsx</td>
-                    <td>Name,Email</td>
-                    <td >XLSX</td>
-                    <th scope="row">
-                        <button type="button" class="btn btn-success badge rounded-pill">YES</button>
-                    </th>
-                </tr>
-                <tr>
-
-                    <td style="color:red">Restricted</td>
-                    <td>test-2.xlsx</td>
-                    <td>Credit card,Name</td>
-                    <td >XLSX</td>
-                    <th scope="row">
-                        <button type="button" class="btn btn-success badge rounded-pill">YES</button>
-                    </th>
-                </tr>
-
-                    <td style="color:orange">Private</td>
-                    <td>test-3.csv</td>
-                    <td>Phone number,Name</td>
-                    <td >CSV</td>
-                    <th scope="row">
-                        <button type="button" class="btn btn-success badge rounded-pill">YES</button>
-                    </th>
-                </tr>
-                <tr>
-
-                    <td style="color:green">Public</td>
-                    <td>test-21.csv</td>
-                    <td>Email</td>
-                    <td >CSV</td>
-                    <th scope="row">
-                        <button type="button" class="btn btn-danger badge rounded-pill">NO</button>
-                    </th>
-                </tr>
+                ${rowsHtml.join("")}
             </tbody>
-        </table>
-    </div>
-<!--    <script>
-        $(document).ready(function() {
-            $('#report').DataTable( {
-            responsive: true,
-            "pageLength": 10
-            } );
-        } );
-    </script>-->
-  </body>
-</html>
+        `);
+
+  }}
+
+
+const tableRoot = document.querySelector("#csvRoot");
+const csvFileInput = document.querySelector("#csvFileInput");
+const tableCsv = new TableCsv(tableRoot);
+
+csvFileInput.addEventListener("change", e => {
+  Papa.parse(csvFileInput.files[0], {
+    delimiter: ",",
+    skipEmptyLines: true,
+    complete: results => {
+      tableCsv.update(results.data.slice(1), results.data[0]);
+    } });
+
+});
+//# sourceURL=pen.js
+    </script>
+{%endblock%}
+ 
