--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,59 +1,56 @@
-<!doctype html>
+{%extends "base.html"%}
 
-<html>
+{%block title%}Scan File{%endblock%}
 
-    <head>
-        <title>AP2I: Scanning and Discovering Tool</title>
+{%block head%}
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="jquery-3.5.1.min.js"></script>
-        
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-        <link rel="stylesheet" href="{{url_for('static',filename='style/style1.css')}}">
-        <link href="/open-iconic/font/css/open-iconic-bootstrap.css" rel="stylesheet">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="jquery-3.5.1.min.js"></script>
 
-        <script>
-            function optSelect(){
-                if (document.getElementById("option1").checked){
-                    document.getElementById("choice1").style.display='block';
-                    document.getElementById("choice2").style.display='none';
-                    document.getElementById("choice3").style.display='block';
-                    }
-                
-                if (document.getElementById("option2").checked){
-                    document.getElementById("choice1").style.display='none';
-                    document.getElementById("choice2").style.display='block';
-                    document.getElementById("choice3").style.display='block';
-                    }
+<script>
+    function optSelect(){
+        if (document.getElementById("option1").checked){
+            document.getElementById("choice1").style.display='block';
+            document.getElementById("choice2").style.display='none';
+            document.getElementById("choice3").style.display='block';
             }
-        </script>
-        <script language="javascript" type="text/javascript">
-            $(function()
-            {
-                $('#choice1').on('change',function ()
-                {
-                    var filePath = $(this).val();
-                    console.log(filePath);
-                 });
-            });
-        </script>
-        <script type="text/javascript">    
-            var path = (window.URL || window.webkitURL).createObjectURL(file);
-            console.log('path', path);
-        </script>
-    </head>
+        
+        if (document.getElementById("option2").checked){
+            document.getElementById("choice1").style.display='none';
+            document.getElementById("choice2").style.display='block';
+            document.getElementById("choice3").style.display='block';
+            }
+    }
+</script>
+<script language="javascript" type="text/javascript">
+    $(function()
+    {
+        $('#choice1').on('change',function ()
+        {
+            var filePath = $(this).val();
+            console.log(filePath);
+         });
+    });
+</script>
+<script type="text/javascript">    
+    var path = (window.URL || window.webkitURL).createObjectURL(file);
+    console.log('path', path);
+</script>
+{%endblock%}
 
-    <body>
-        <h1 class="container p-3 mb-2"> Welcome,<br> What files do you want to scan today?</h1>
+{%block content%}
+<h1 class="container p-3 mb-2"> What files do you want to scan today?<br> [csv, xlsx, db, docx, doc, pdf, txt, links]</h1>
         <!-- <h2>msg</h2> -->
         <!--Scanning-->
         <div class="container rounded p-3 mb-2 bg-info">
-            <!-- <div class="d-flex justify-content-between">
-                <h2>Scan</h2>
-                <input class="btn btn-success btn-lg" type="submit" value="Scan" action="main.py"> -->
-                <!--img src="{{url_for('static', filename='search.png', width=5, height=5, quality=95)}}" align="middle"-->
-            <!-- </div> -->
+            <div class="d-flex justify-content-between">
+                <h2>Scan File</h2>
+                <form>
+                    <button type="submit" class="btn btn-success btn-lg" formaction="{{ url_for('index')}}">Home</button>
+                    <button type="submit" class="btn btn-success btn-lg" formaction="{{ url_for('upload_file')}}">Scan</button>
+                    <button type="submit" class="btn btn-success btn-lg" formaction="{{ url_for('piiView')}}">View Reports</button>
+                </form>     
+            </div>
             <br>
             <div class="p-3 mb-2 bg-white">
                 <div class="form-check form-check-inline">
@@ -65,8 +62,8 @@
                     <label class="form-check-label" for="inlineRadio2">Webpage</label>
                 </div>
                 <br> 
-
-                <!-- Input Field-->               
+                
+                <!-- Input Field-->              
                 <form class= "reveal" action="/upload" method="POST" enctype="multipart/form-data">
             
                     <div class="form-group col-md-6" id="choice1" style="display:none">
@@ -77,30 +74,12 @@
                         <label>Enter the link for the website that needs to be scanned</label>
                         <input type="text" class="form-control" name = "web-scan" id="web-scan" placeholder="Insert the web url here" size="500">
                     </div>
-            
+                    <br>
                     <button type="submit" class="btn btn-primary" id="choice3" style="display:none">Scan</button>
             
                 </form>               
             </div>
         </div>
-        
-        <!-- PII Inventory
-        <div class="container rounded bg-info p-3 mb-2">
-            <div class="d-flex justify-content-between">
-                <h2>PII Inventory</h2>
-                <form>
-                    <button type="submit" class="btn btn-success btn-lg" formaction="{{ url_for('piiView')}}">View Reports</button>
-                </form>            
-            </div>
-            <br>
-            <div class="container bg-white p-3 mb-2">
-                <button type="button" class="btn btn-success badge rounded-pill"><i class="fa fa-flag"></i></button>
-                <span> 26 consents found in Consent Management System</span><br>
-                <button type="button" class="btn btn-danger badge rounded-pill"><i class="fa fa-flag"></i></button>
-                <span> 7 consents not found in Consent Management System</span>
-            </div>
-        </div>
-         -->
 
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
         <script>
@@ -111,8 +90,4 @@
                 };
             });
         </script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
-    </body>
-</html>
+{%endblock%}
